# deviceid

./: .gitignore
deviceid-win/: CMakeLists.txt  deviceId-win.slnx  deviceId-win.vcxproj  deviceId-win.vcxproj.filters  main.cpp
deviceid-win/docs/: CHANGELOG.md  IMPLEMENTATION_NOTES.md  PRIVACY.md
deviceid-win/examples/c/: main.c
deviceid-win/examples/cpp/: main.cpp
deviceid-win/examples/csharp/: DeviceInfoExample.cs
deviceid-win/examples/python/: example.py
deviceid-win/examples/rust/: main.rs
deviceid-win/include/DeviceInfoSDK/: DeviceInfo.h  DeviceInfoC.h
deviceid-win/src/: DeviceInfo.cpp  DeviceInfoC.cpp
deviceid-win/src/internal/: DeviceIdManager.cpp  DeviceIdManager.h  Interfaces.h  NetworkCollector.cpp  NetworkCollector.h  SmbiosCollector.cpp  SmbiosCollector.h  SystemCollectors.cpp  SystemCollectors.h  Utf8.cpp  Utf8.h  WinHandle.h
deviceid-win/tests/abi/: abi_layout.cpp
deviceid-win/tests/unit/: device_id_smoke.cpp
doc/: DeviceInfoSDK_使用文档.md  Windows_DeviceInfo_SDK_SPEC.md
